--- a/web/webInterface/Gemfile
+++ b/web/webInterface/Gemfile
@@ -8,7 +8,10 @@ gem 'bootstrap', '~> 4.0'
 gem 'jquery-rails'
 
 # Font awesome
-gem "font-awesome-rails"
+gem 'font-awesome-rails'
+
+# rails config
+gem 'config'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.2.3'
